# cfg-watcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: AppSettings.cpp  AppSettings.h  ISetting.h  Registry.cpp  Registry.h  Serialization.cpp  Serialization.h  Setting.h  SettingTraits.h  Settings.cpp  Settings.h  SettingsModel.cpp  SettingsModel.h  Settings_old.cpp  Settings_old.h  enums.h  main.cpp
ui/: PageContainer.slint  SideBar.slint  app-window.slint  color-palette.slint  settings-page.slint  slint-main.slint  splash-screen.slint  test1.slint
